[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/game.gd" type="Script" id=1]
[ext_resource path="res://game/hud/hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/paddle/paddle.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/ball/ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/walls/walls.tscn" type="PackedScene" id=5]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="Paddle" parent="." instance=ExtResource( 3 )]
position = Vector2( 520, 580 )

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 520, 560 )
start_paddle = NodePath("../Paddle")

[node name="Walls" parent="." instance=ExtResource( 5 )]

[connection signal="lives_changed" from="." to="HUD" method="_on_lives_changed"]
[connection signal="score_changed" from="." to="HUD" method="_on_score_changed"]
[connection signal="ball_fell" from="Walls" to="." method="_on_ball_fell"]
[connection signal="ball_fell" from="Walls" to="Ball" method="_on_ball_fell"]
